feat: segment manager can handle overlapping segments